--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ I am already familiar with Java , python , c , html and css!!
     listening to music<br>
 </p>
 <h1>This is Meeee</h1>
-<a href="links.html"target="_blank">links</a>
-<a href="movies.html"target="_blank">movies</a>
+<a href="links.html style="font-size: 24px;""target="_blank">different websites I use</a><br>
+<a href="movies.html style="font-size: 24px;""target="_blank">my top 5 fav movies</a>
 </body>
 </html>
